# TestInplaceAny

./: CMakeLists.txt  InplaceAnyCopy.h  main.cpp
